Styles & bug fix
-Whole interface reworked
-Fixed bug with horizontal scroll

--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,30 @@
+@font-face {
+  font-family: "Circe";
+  src: url(./utils/fonts/Circe-Regular.woff) format("woff");
+  font-weight: normal;
+}
+
+@font-face {
+  font-family: "Circe";
+  src: url(./utils/fonts/Circe-Bold.woff) format("woff");
+  font-weight: bold;
+}
+
+@font-face {
+  font-family: "Circe";
+  src: url(./utils/fonts/Circe-Light.woff) format("woff");
+  font-weight: 100;
+}
+
 .App {
+  font-family: "Circe";
   display: flex;
   flex-direction: column;
   align-items: center;
   text-align: center;
   height: 100vh;
+  background-color: rgba(220, 220, 220, 0.322);
+  text-overflow: ellipsis
 }
 
 .App-logo {
@@ -41,12 +62,13 @@ input {
   padding: 15px;
   width: 250px;
   margin-bottom: 25px;
+  border: 1px solid #d9d9d9;
 }
 
 .incident-list__sort {
   width: 15px;
   height: 15px;
-  margin-left: 5px;
+  padding-left: 7px;
 }
 
 .incident-popup {
@@ -130,14 +152,14 @@ input {
   padding: 20px;
   display: flex;
   flex-direction: row;
-  overflow: hidden;
-  overflow-x: scroll;
+  overflow-x: hidden;
+  overflow-y: auto;
 }
 
 .incident-popup__services-item {
   display: flex;
   min-width: 200px;
-  margin-right: 10px;
+  margin-right: 20px;
   height: 70px;
   border: 1px solid #d9d9d9;
   align-items: center;
@@ -151,7 +173,10 @@ input {
 }
 
 .incident-popup__services-item_active {
-  border: 1px solid rgb(0, 197, 49);
+  border: transparent 1px solid;
+  -webkit-box-shadow: 0px 0px 25px 3px rgba(0, 189, 39, 0.33);
+  -moz-box-shadow: 0px 0px 25px 3px rgba(0, 189, 39, 0.33);
+  box-shadow: 0px 0px 25px 3px rgba(0, 189, 39, 0.33);
 }
 
 .incident-popup__services-loading {
@@ -203,23 +228,48 @@ input {
   align-items: center;
   width: 512px;
   border: 1px solid #d9d9d9;
-  margin-top: 250px;
+  margin-top: 200px;
+  border-radius: 8px;
+  background-color: #fff;
 }
 
 .form__title {
   margin-top: 0;
 }
 
+.form_p {
+  align-self: flex-start;
+  margin: 0 0 10px 40px;
+}
+
 .form input {
-  width: 80%;
+  font-family: 'Circe';
+  font-weight: normal;
+  font-size: 16px;
+  border-radius: 6px;
+  width: 400px;
+}
+
+.form input:focus {
+  outline: none;
 }
 
 .form button {
+  font-family: inherit;
+  font-size: 16px;
   border: none;
   background-color: #000;
   color: #fff;
-  width: 150px;
+  width: 431px;
   height: 50px;
+  border-radius: 6px;
+  font-weight: bold;
+  margin: 20px 0 20px 0;
+  transition: .3s ease-in-out;
+}
+
+.form button:hover {
+  opacity: .8;
 }
 
 .form__title {
@@ -235,6 +285,7 @@ header {
   justify-content: space-between;
   border-bottom: 1px solid #d9d9d9;
   align-items: center;
+  background-color: #fff;
 }
 
 .header__logo {
@@ -255,51 +306,83 @@ header {
 }
 
 .profile-page-block {
+  width: 100%;
   display: flex;
+  justify-content: center;
+  align-items: center;
   flex-direction: column;
 }
 
 .button-add-new-incident {
-  align-self: flex-end;
-  border: none;
-  background-color: #000;
-  color: #fff;
+  position: absolute;
+  top: 7px;
+  right: 50%;
+  border: 1px solid #d9d9d9;
+  background-color: #fff;
+  color: #000;
   width: 150px;
-  height: 50px;
+  height: 60px;
+  border-radius: 6px;
+  font-size: 14px;
+  transition: .3 ease-in-out;
 }
 
 .button-add-new-incident:hover {
   cursor: pointer;
+  color: #fff;
+  background-color: #000;
 }
 
 .profile-div {
-  width: 1280px;
+  margin-top: 30px;
+  width: 90%;
+  border-radius: 6px;
   height: 768px;
   display: flex;
   flex-direction: row;
   border: 1px solid #d9d9d9;
+  background-color: #fff;
+  box-shadow: 0px 1px 4px rgba(53, 53, 61, 0.05);
 }
 
 .incident-list__table {
   position: relative;
-  width: 50%;
+  width: 30%;
   border-right: 1px solid #d9d9d9;
 }
 
 .incident-list__body::-webkit-scrollbar {
-  width: 10px;
+  background-color: transparent;
+  width: 6px;
 }
 
 .incident-list__body::-webkit-scrollbar-track {
-  background-color: #e4e4e4;
+  background-color: transparent;
 }
 
 .incident-list__body::-webkit-scrollbar-thumb {
-  background-color: #b9b9b9;
+  background-color: transparent;
 }
 
+.incident-list__body:hover::-webkit-scrollbar-thumb {
+  border-radius: 100px;
+  background-clip: content-box;
+  background-color: #00000075;
+}
+
+.incident-list__body:hover::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+
+.incident-list__body:hover::-webkit-scrollbar {
+  background-color: transparent;
+}
+
+
+
+
 .incident-list__header {
-  height: 60px;
+  height: 60px; 
   display: flex;
   flex-direction: row;
   font-weight: bold;
@@ -310,23 +393,31 @@ header {
   z-index: 1;
   padding-right: 10px;
   align-items: center;
+  border-radius: 6px 0 0 0;
 }
 
 .incident-list__body {
+  transition: .3s ease-in-out;
   z-index: 0;
   height: calc(100% - 60px);
-  overflow-y: auto;
   scrollbar-gutter: auto;
+  overflow-y: auto;
+}
+
+.incident-list__body:hover .incident-list__body::-webkit-scrollbar {
+  overflow-y: auto;
+  width: 10px;
 }
 
 .incident-list__row {
-  padding: 12px 0 12px 0;
+  height: 84px;
   display: flex;
   flex-direction: row;
   align-items: center;
   border-bottom: 1px solid #d9d9d9;
   transition: .3s ease-in-out;
   user-select: none;
+  width: 100%;
 }
 
 .incident-list__row:hover {
@@ -339,11 +430,12 @@ header {
 }
 
 .first-column {
-  width: 40%;
+  width: 30%;
+  margin-left: 30px;
 }
 
 .second-column {
-  width: 40%;
+  width: 50%;
 }
 
 .third-column {
@@ -356,26 +448,29 @@ header {
 
 .incident-list__cell {
   transition: .3s ease-in-out;
-  display: flex;
-  flex-direction: row;
-  padding: 15px 20px 15px 20px;
+  text-align: left;
   text-overflow: ellipsis;
   justify-content: center;
   align-items: flex-end;
   user-select: none;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 .incident-info__div {
-  width: 50%;
+  width: 70%;
 }
 
 .incident-info__header {
   height: 60px;
   display: flex;
   flex-direction: row;
-  border-bottom: 1px solid #d9d9d9;
-  background-color: #fff;
+  border: 1px solid #000000;
+  border-bottom: 1px solid #D9D9D9;
+  background-color: #000000;
   align-items: center;
+  border-radius: 0 6px 0 0;
+  color: #fff;
 }
 
 .incident-info__first-cell {
@@ -404,8 +499,16 @@ header {
   font-weight: bold;
 }
 
+.incident-info__text-block {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  min-height: 50%;
+}
+
 .incident-info__topic {
   text-align: left;
+  margin: 0;
   margin-left: 20px;
 }
 
@@ -414,8 +517,9 @@ header {
 }
 
 .incident-info__description {
+  margin: 0;
   text-align: justify;
-  padding: 20px;
+  padding: 0 20px 20px 20px; 
 }
 
 .incident-info__curator {
